--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Site Stats</title>
+  <script src="vendor/require.js" data-main="src/app"></script>
 </head>
 <body>
   
