--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Site Stats</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <script src="vendor/d3.min.js"></script>
   <script src="vendor/require.js" data-main="src/app"></script>
