add css structure and colors

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Site Stats</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/structure.css">
+
   <script src="vendor/d3.min.js"></script>
   <script src="vendor/require.js" data-main="src/app"></script>
 </head>
